--- a/aspnet-core/src/ScoringAppReact.Web.Host/appsettings.json
+++ b/aspnet-core/src/ScoringAppReact.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-IH93H2S\\SQLEXPRESS  ; Database=ScoringAppReactDb; Trusted_Connection=True;"
+    "Default": "Server=DESKTOP-2SQ6ECO; Database=ScoringAppReactDb; Trusted_Connection=True;"
   },
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
