--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -8,8 +8,10 @@
     "abp-web-resources": "^5.1.1",
     "antd": "^3.26.0",
     "axios": "^0.19.0",
+    "bisheng": "^0.28.2",
     "classnames": "^2.2.6",
     "craco-antd": "^1.14.1",
+    "enquire-js": "^0.1.0",
     "famfamfam-flags": "^1.0.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.15",
@@ -17,23 +19,22 @@
     "mobx-react": "^6.1.4",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
+    "rc-queue-anim": "^1.4.0",
+    "rc-scroll-anim": "^2.2.1",
+    "rc-tween-one": "^1.7.0",
     "react": "^16.12.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.12.0",
+    "react-intl": "^2.4.0",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "recharts": "^1.8.5",
     "tesseract.js": "^2.1.5",
-    "yup": "^0.32.11",
-    "react-intl": "^2.4.0",
-    "rc-scroll-anim": "^2.2.1",
-    "rc-tween-one": "^1.7.0",
-    "rc-queue-anim": "^1.4.0",
-    "bisheng": "^0.28.2",
-    "enquire-js": "^0.1.0"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "craco start",
